# O-Platy60-server

./: .gitignore  main.py  pyproject.toml  run.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  auth.py  categories.py  ingredients.py  inventory.py  llm.py  products.py  purchases.py  router.py  transformations.py  transformations_steps.py  users.py
app/core/: __init__.py  exception.py
app/db/: __init__.py  supabase.py
app/db/repositories/: __init__.py  auth_repository.py  category_repository.py  ingredient_repository.py  inventory_repository.py  product_repository.py  purchase_repository.py  transformation_repository.py  transformation_step_repository.py  users_repository.py
app/middleware/: __init__.py  error_handler.py
app/models/: __init__.py  auth.py  category.py  ingredients.py  inventory.py  product.py  purchase.py  shared.py  transformation.py  transformation_step.py  users.py
app/services/: __init__.py  auth_service.py  category_service.py  ingredient_service.py  inventory_service.py  product_service.py  purchase_service.py  serialization.py  transformation_service.py  transformation_step_service.py  user_service.py
app/utils/: auth.py
tests/: __init__.py
