[project]
name = "o-platy60-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "ipython>=9.9.0",
    "pydantic[email]>=2.12.5",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
]
